--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css" />
 		<link rel="stylesheet" media="screen and (min-width:1100px)" href="css/widescreen.css" />
 		<link rel="icon" href="favicon.png" type="image/png" />
-		<title>EdgeLedger Financial | Accounting & Investment</title>
+		<title>EdgeLedger | Financial | Accounting & Investment</title>
 	</head>
 	<body id="home">
 		<!-- Navbar -->
@@ -158,7 +158,7 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- Main JS File -->
-		<script src="./js/main.js"></script>
+		<script src="js/main.js"></script>
 		<!-- Google Maps -->
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM_6Pjc6zDMwVD2x-FFtEh0cLP2TSpMH8&callback=initMap"
@@ -167,4 +167,3 @@
 		></script>
 	</body>
 </html>
-
