--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			crossorigin="anonymous"
 		></script>
 		<!-- Main JS File -->
-		<script src="js/main.js"></script>
+		<script src="js/main.js" type="text/javascript"></script>
 		<!-- Google Maps -->
 		<script
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM_6Pjc6zDMwVD2x-FFtEh0cLP2TSpMH8&callback=initMap"
